--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <!--Add the title of your typeform below-->
-  <title>Donesday 2016 Registration</title>
+  <title>Donesday - Getting shit done like there is no tomorrow</title>
 
   <!--CSS styles that ensure your typeform takes up all the available screen space (DO NOT EDIT!)-->
   <style type="text/css">
